--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cached_network_image: ^3.4.1
   provider: ^6.1.2
   shared_preferences: ^2.5.2
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
